--- a/css/Main-styles.css
+++ b/css/Main-styles.css
@@ -6,8 +6,12 @@
 :root{
     --header-banner-backgroundColor: rgb(242,242,242);
 }
-
-header {
+.cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+ header {
     width: 100%;
     height: 79px;
     background-color: var(--header-banner-backgroundColor);
@@ -103,7 +107,7 @@ header .social i {
     bottom: 0;
     
 }
-.close {
+/* .close {
     font-size: 25px;
   padding-left: 60%;
   padding-top: 5%;
@@ -137,3 +141,41 @@ header .social i {
     text-decoration: none;
     font-family: normal;
 }
+  */
+
+main .main-image{
+    width: 100%;
+    height: 475px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main .main-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+main .main-image .main-image-text{
+    width: 40%;
+    height: 30%;
+    position: absolute;
+    top: 20%;
+ 
+    text-align: center;
+    color: #fff;
+}
+main .main-image .main-image-text h1{
+    font-size: 70px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
+
+}
+main .main-image .main-image-text p {
+    font-family: normal;
+    font-size: 18px;
+}
+
+
