--- a/css/media.css
+++ b/css/media.css
@@ -26,6 +26,23 @@
         text-align: center;
          
     }
+
+    main .main-image {
+        width: 100%;
+        height: 235px;
+    }
+    main .main-image .main-image-text {
+        width: 100%;
+        height: 20%;
+        text-align: center;
+        align-items: center;
+    }
+    main .main-image .main-image-text h1 {
+        font-size:  40px;
+    }   
+     main .main-image .main-image-text p {
+        font-size: 15px;
+     }
     /* .menu-btn {
         width: 300px;
         
@@ -74,3 +91,60 @@
         text-align: center;
          
     }
+    main .main-image {
+        width: 100%;
+        height: 235px;
+    }
+    main .main-image .main-image-text {
+        width: 100%;
+        height: 20%;
+        text-align: center;
+        align-items: center;
+    }
+    main .main-image .main-image-text h1 {
+        font-size:  40px;
+    }   
+     main .main-image .main-image-text p {
+        font-size: 15px;
+     }
+}
+
+@media (max-width: 992px)  {
+    main .main-image {
+        width: 100%;
+        height: 235px;
+    }
+    main .main-image .main-image-text {
+        width: 100%;
+        height: 20%;
+        text-align: center;
+        align-items: center;
+    }
+    main .main-image .main-image-text h1 {
+        font-size:  40px;
+    }   
+     main .main-image .main-image-text p {
+        font-size: 15px;
+     }
+}
+
+
+@media (max-width: 1400px) {
+    main .main-image {
+        width: 100%;
+        height: 370px;
+    }
+    main .main-image .main-image-text {
+        width: 100%;
+        height: 20%;
+        top: 20%;
+        text-align: center;
+        align-items: center;
+    }
+    main .main-image .main-image-text h1 {
+        font-size:  60px;
+    }   
+     main .main-image .main-image-text p {
+        font-size: 15px;
+     }
+}
