--- a/css/Main-styles.css
+++ b/css/Main-styles.css
@@ -11,6 +11,14 @@
     height: 100%;
     object-fit: cover;
 }
+.dot{
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    margin: 0 8px;
+    box-sizing: inherit;
+    background-color: black;
+}
  header {
     width: 100%;
     height: 79px;
@@ -178,4 +186,146 @@ main .main-image .main-image-text p {
     font-size: 18px;
 }
 
+.trevel-cards {
+     width: 100%;
+     height: 475px;
+   
+     
+     
+}
+.trevel-cards  .trevel-text {
+    height: 30%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: normal;
+    color: rgb(105, 105, 105);
+   
+}
+.trevel-cards  .card-container{
+   width: 100%;
+   height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+   
+}
+.trevel-card-holder{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.trevel-cards  .trevel-card{
+    width: 30%;
+    height: 260px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.trevel-cards .trevel-card button {
+    position: absolute;
+    padding: 20px 60px;
+    border: none;
+    background-color: rgb(255,255,255);
+    color: rgb(37,115,218);
+     font-size: 25px;
+    font-family: 'Playfair Display', serif;
+    transition: .5s ease;
+}
+ 
+.trevel-cards .trevel-card button:hover {
+    background-color:rgb(37,115,218) ;
+    color: rgb(255,255,255);
+    cursor: pointer;
+}
+.banner{
+    width: 100%;
+    height: 162px;
+    background-color: rgb(242,242,242);
+}
+.baner-container {
+    width: 64%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
 
+}
+
+.baner-container .feature p {
+
+    font-size: 25px;
+    font-family: 'Playfair Display', serif;
+
+}
+ .left-border{
+    width: 1%;
+    height: 35%;
+    border-left: 2px solid black;
+   
+}
+.baner-container .trevel p  {
+    font-size: 25px;
+    line-height: 1em;
+    font-weight: bold;
+}
+.baner-container .trevel span {
+    letter-spacing: 0.05em;
+    font-size: 20px;
+    line-height: 1em;
+    padding:  0 40%;
+}
+.baner-container .plane p {
+    font-family: normal;
+    font-size: 24px;
+    letter-spacing: normal;
+    line-height: normal;
+ 
+}
+.baner-container .plane span{
+    font-weight: bolder;
+}
+.baner-container .plane i{
+    font-size: 25px;
+ 
+}
+.baner-container .plane  .rotate {
+ width: 25px;
+ height: 25px;
+ margin: 0 auto;
+ 
+ text-align: center;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ transform: rotate(-45deg);
+ 
+
+}
+.baner-container  .world{
+    letter-spacing: 0.1em;
+    font-size: 21px;
+    line-height: 1em;
+    color: rgb(0,0,0);
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bold;
+}
+.baner-container .cloud p {
+    font-size: 24px;
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bold;
+
+}
+.baner-container .cloud i  {
+    font-size: 24px;
+    margin-left: 65%;
+}
+ 
