--- a/css/Main-styles.css
+++ b/css/Main-styles.css
@@ -11,149 +11,73 @@
     height: 100%;
     object-fit: cover;
 }
-.dot{
-    width: 5px;
-    height: 5px;
-    border-radius: 50%;
-    margin: 0 8px;
-    box-sizing: inherit;
-    background-color: black;
+.bi-list {
+    display: none;
+    font-size: 25px;
+    color: black;
 }
- header {
+
+header{
     width: 100%;
-    height: 79px;
+    height: 67px;
     background-color: var(--header-banner-backgroundColor);
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-}
-header .search {
-    width: 15%;
-    height: 40px;
-    /* margin: 5%; */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-   
-}
-header .search input{
-    border: none;
-    height: 47px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.466);;
-    background-color: var(--header-banner-backgroundColor);
-}
-header .search  i {
-    font-size: 14px;
-    color: var(--header-banner-backgroundColor);
-    color: rgba(0, 0, 0, 0.466);
-    position: absolute;
-    margin-left: 9%;
-}
-header .search input::placeholder{
-    padding: 0 6%;
-    
-}
-header .menu{
-    width: 35%;
-    height: 35px;
-   
-   
+    justify-content: space-evenly;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+
 
 }
-header .menu ul {
+header .menu {
+    width: 20%;
+    height: 100%;
+      
+}
+header .menu nav{
     width: 100%;
     height: 100%;
+}
+header .menu nav ul  {
     display: flex;
-    justify-content: space-between;
+    width: 100%; 
+    height: 100%;
     align-items: center;
-    text-align: center;
-}
-header .menu ul li {
-    list-style: none;
-    
-}
-header .menu ul li  a {
-    font-size: 14px;
-    text-align: center;
-    line-height: 35px;
-    color: rgb(105, 105, 105);
-    text-decoration: none;
-    font-family: normal;
-}
-
-header .social{
-    width: 10%;
-    height: 35px;
-     
-   
-    display: flex;
     justify-content: space-around;
-    align-items: center;
-    text-align: center;
 }
-header .social i {
-    font-size: 15px;
-    color: rgb(105, 105, 105);
-    cursor: pointer;
-}
-.menbtn {
-    font-size: 30px;
-    display: none;
-}
-.menu-btn {
-    width: 360px;
-    height: 100vh;
-    background-color: var(--header-banner-backgroundColor);
-   
-    position: fixed;
-    z-index: 1000;
-    top: 0;
-    right: 0;
-    /* display: none; */
-    bottom: 0;
-    
-}
-/* .close {
-    font-size: 25px;
-  padding-left: 60%;
-  padding-top: 5%;
-    
-}
-.menu-btn  .menu-bar{
-    width: 100%;
-       
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.menu-btn  .menu-bar ul {
-    width: 100%;
-    margin-top: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    line-height: 50px;
- 
+header .menu nav ul  li {
     list-style: none;
+}
+header .menu nav ul  li a {
+    text-decoration: none;
+    font-size: 15px;
+    color: rgba(46, 46, 46, 0.719);
+    font-family: normal;
+    
+}
+header  .social {
+     width: 10%;
+     height: 100%;
      
 
 }
-.menu-btn  .menu-bar ul a{
-    color: black;
-    line-height: 35px;
-    color: rgb(105, 105, 105);
-    text-decoration: none;
-    font-family: normal;
+header  .social  ul {
+    display: flex; 
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style: none;
+    color: rgba(46, 46, 46, 0.719);
 }
-  */
+ 
+ 
+ 
 
 main .main-image{
     width: 100%;
     height: 475px;
+    overflow: hidden;
     position: relative;
     display: flex;
     justify-content: center;
@@ -170,32 +94,31 @@ main .main-image .main-image-text{
     width: 40%;
     height: 30%;
     position: absolute;
-    top: 20%;
+    top: 30%;    
  
     text-align: center;
     color: #fff;
 }
 main .main-image .main-image-text h1{
-    font-size: 70px;
+    font-size: 75px;
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
 
 }
 main .main-image .main-image-text p {
     font-family: normal;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .trevel-cards {
-     width: 100%;
-     height: 475px;
-   
+     width: 100%;   
      
      
 }
 .trevel-cards  .trevel-text {
     height: 30%;
     width: 100%;
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -208,19 +131,20 @@ main .main-image .main-image-text p {
    width: 100%;
    height: 80%;
     display: flex;
+    margin-top: 5%;
     justify-content: center;
     align-items: center;
  
    
 }
 .trevel-card-holder{
-    width: 50%;
+    width: 75%;
     height: 100%;
     display: flex;
     justify-content: space-between;
 }
 .trevel-cards  .trevel-card{
-    width: 30%;
+    max-width: 330px;
     height: 260px;
     position: relative;
     display: flex;
@@ -247,10 +171,11 @@ main .main-image .main-image-text p {
 .banner{
     width: 100%;
     height: 162px;
+    margin-top: 5%;
     background-color: rgb(242,242,242);
 }
 .baner-container {
-    width: 64%;
+    width: 80%;
     height: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -328,4 +253,276 @@ main .main-image .main-image-text p {
     font-size: 24px;
     margin-left: 65%;
 }
+
+/* post */
+.post-holder {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
+   
+}
+
+
+.post{
+   max-width: 990px;
+    margin-bottom: 3%;
+    border: 1px solid rgba(0, 0,  0, 0.1);
+ }
+ .post-main-contant{
+    padding:  30px;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+ }
+ .post .post-main-img{
+    width: 100%;
+    height: 70%;
+ }
+ .post-author {
+    width: 100%;
+    
+    display: flex;
+    font-family: normal;
+    color: rgb(58, 58, 58);
+ }
+
+ .post .post-author-img {
+     width: 32px;
+     height: 32px;
+     margin: 10px;
+ }
+ .post-author-data{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+ }
+ .post-content-text  {
+    margin: 20px 11px;
+    margin-top: 0;
+    cursor: pointer;
+    transition: 0.6s ease;
+    
+ }
+ .post-content-text:hover h1{
+    color: rgb(37,115,218);
+    cursor: pointer;
+ }
+ .post-content-text:hover p{
+    color: rgb(37,115,218);
+    cursor: pointer;
+}
+ .post-content-text  h1{
+    font-size: 30px;
+    font-family: 'Playfair Display', serif;
+    font-weight: normal;
+    margin: 10px 0;
+    color: rgb(58, 58, 58);
+
+ }
+ .post-content-text p {
+    font-size: 17px;
+    font-family: normal;
+    color: rgb(83,83,83);
+ }
+ .post .line  {
+    width:  100%;
+    height: 1px;
+    margin: 20px 0;
+    background-color: black;
+ }
+ .post-feedback{
+    width: 100%;
+    
+    display: flex;
+    justify-content: space-between;
+ }
+.post-feed-left{
+    width: 7%;
+    display: flex;
+    justify-content: space-between;
+}
+.post-feed-right{
+    width: 3%;
+    display: flex;
+    justify-content: space-between;
+}
+.post-feed-right i {
+    color: red;
+}
+
+
+
+
+
+footer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+}
+ footer .social-networck {
+    width: 100%;
+    height: 70px;
+    background-color: rgb(37,115,218);
+    display: flex;
+    justify-content: center;
+ }
+  .social-networck  .social-network-holder   {
+      width: 75%;
+     height: 100%;
+     
+ }
+ .social-networck  .social-network-holder  ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    list-style: none;
+ }
+ .social-networck  .social-network-holder  ul  li a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: normal;
+ }
+ .social-networck  .social-network-holder  ul  li a  i {
+    margin: 10px ;
+ }
+
+
+ .image-cards {
+    width: 100%; 
+  
+    display: flex;
+
+ }
+ .image-cards  .image-card  img{
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+ }
+ 
+ .image-card{
+    width: 20%;
+    height: 100%;
+    position: relative;
+ }
+ .image-card-overlay {
+    position: absolute;
+    width: 100%;
+     height: 98.5%;
+    overflow: hidden;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: rgb(255,255,255,0);
+    font-size: 30px;
+    transition: 0.3s ease;
+    cursor: pointer;
+
+ }
+ .image-card:hover .image-card-overlay {
+    background-color: rgba(0, 0, 0, 0.4);
+    color: rgb(255,255,255,1);
+ }
+
+
+
+ 
+ .cotact-forms  {
+    width: 100%;
+    height: 400px;
+     margin: -10px auto;
+ 
+    background-color: rgba(46, 46, 46, 0.719);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    
+    
+ }
+ .contact-container {
+    width: 95%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 3%;
+ }
+ .contact-container .img img {
+      width: 180px;
+      height: 180px;
+      margin-left: 30%;
+ }
+ .contact-data {
+    margin-right: 10%;
+ }
+ .contact-data h3 {
+    font-size: 25px;
+    font-family: 'Playfair Display', serif;
+    font-weight: normal;
+    color: white;
+    
+ }
+ .contact-data  p {
+    font-size: 15px;
+    font-family: normal;
+    color: white;
+ }
+ .contact-data a {
+    color: white;
+    font-family: normal;
+    font-weight: 100;
+    font-size: 18px;
+ }
+ .contact-info {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.5%;
+   
+ }
+
+ .contact-info h1 {
+    font-family: 'Playfair Display', serif;
+    color: white;
+    font-weight: normal;
+
+ }
+ .contact-info  input {
+    width: 60%;
+    height: 30px;
+    background: transparent;
+   border: 1px solid white;
+ }
+ .contact-info  input::placeholder {
+    color: white;
+    padding: 0  7%;
+    font-size: 13px;
+ }
+ 
+ .contact-info  button {
+   width: 60%;
+   height: 30px;
+   background-color: rgb(37,115,218);
+   border: none;
+   color: white;
+   font-family: normal;
+   font-size: 14px;
+   letter-spacing: 1px;
+   cursor: pointer;
+ }
+ 
+
  
