--- a/css/media.css
+++ b/css/media.css
@@ -1,2 +1,143 @@
+@media screen and (max-width: 500px){
+     header .menu nav  {
+           display: none;
+     }
+     header .bi-list{
+        display: block !important;
+     }
+     header .menu {
+        width:  70%;      
+        display: flex;  
+        align-items: center;
+        
+    }
+     header  .social{
+        width: 30%;
+     }
+
+    .main-image-text {
+         width: 100% !important;
+         height: 100% !important;
+         top: 0 !important;
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+    }
+    .main-image-text  p {
+        font-size: 16px !important;
+    }
+    .trevel-cards .trevel-text{
+          text-align: center;
+          box-sizing: border-box;
+          padding: 25px;
+    }
+
+    .trevel-card-holder {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+       
+    }
+    .trevel-card {
+        margin: 2% 0;
+    }
+    .banner{
+     
+        margin: 0 auto;
+        max-width: 317px;
+        height: 100%;
+        box-sizing: border-box !important; 
+    }
+    .baner-container{
+         flex-direction: column;
+         
+         
+    }
+    .baner-container .feature, .trevel, .plane, .world ,.cloud {
+        margin: 5% 0;
+    }
+     .post .post-main-img {
+        height: 50% !important;
+     }
+     .post-main-contant{
+        height: 50% !important;
+     }
+     .post-holder{
+        box-sizing: border-box !important; 
+        padding: 0  4% !important;
+     }
+
+    .image-cards{ 
+         flex-direction: column;
+    }
+     .image-card{
+        width: 100%;
+         
+
+     }
+     .social-network-holder{
+         
+        width: 100% !important;
+       
+     }
+     .social-networck .social-network-holder ul {
+        box-sizing: border-box !important;
+        text-align: center;
+        padding: 20px !important;
+        
+     }
+     .cotact-forms {
+        width: 100%;
+        height: 800px !important;
+     }
+   .contact-container{
+       flex-direction: column !important;
+       justify-content: center;
+       align-items: center;
+       box-sizing: border-box;
+        margin-bottom: 10% !important;
+        margin-right: 28% !important;
+         
+
+   }
+   .cotact-forms .img  img{
+      
+      margin: 0 33% !important;
+   }
+   .contact-data {
+    width: 100%;
+     display: flex;
+     flex-direction: column;
+     text-align: center;
+     box-sizing: border-box;
+     padding: 25px;
+    margin-top: 5% !important;
+    margin-left: 55% !important;
  
+   }
+   .contact-info {
+    width: 100%;
+    margin-top: 5% !important;
+    margin-left: 50% !important;
+
+   }
+   .contact-info h1{
+   
+    padding: 0 12% !important;
+   }
+   .contact-info input {
+    width: 100%;
+   }
+   .contact-info button {
+    width: 100%;
+   }
+  
  
+  
+    
+
+ 
+
+}
+
